# taskmanager

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-05-21-taskmanager-phase1-2.md
docs/superpowers/specs/: 2026-05-21-taskmanager-design.md
graphify-out/: .graphify_manifest.json  GRAPH_REPORT.md  graph.json
scripts/: generate-updater-manifest.mjs  generate-updater-manifest.test.mjs  install.ps1  install.sh  set-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: app.rs  mod.rs  pomodoro.rs  settings.rs  sync.rs  task.rs
src-tauri/src/models/: mod.rs  pomodoro.rs  settings.rs  sync.rs  task.rs
src-tauri/src/modules/: db.rs  mod.rs  pomodoro.rs  settings.rs  sync.rs  task.rs
src/components/calendar/: CalendarView.tsx  DayView.tsx  MonthView.tsx  WeekView.tsx
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/components/tasks/: TaskCard.tsx  TaskDetailPanel.tsx  TaskFilters.tsx  TaskForm.tsx  TaskList.tsx
src/pages/: CalendarPage.tsx  CockpitPage.tsx  PomodoroPage.tsx  SettingsPage.tsx  TasksPage.tsx  TodayPage.tsx
src/services/: appEvents.test.ts  appEvents.ts  taskService.test.ts  taskService.ts  updateService.test.ts  updateService.ts
src/stores/: calendarStore.ts  pomodoroStore.ts  settingsStore.ts  taskStore.ts  updateStore.ts
src/types/: task.ts  update.ts
src/utils/: cockpitTaskRecords.test.ts  cockpitTaskRecords.ts  cockpitTransparency.test.ts  cockpitTransparency.ts  taskUtils.test.ts  taskUtils.ts
