[package]
name = "taskmanager"
version = "0.2.4"
description = "A desktop task manager"
authors = ["you"]
edition = "2021"

[lib]
name = "taskmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "taskmanager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

